<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"/>
    <item android:title="Profilo"
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"/>
    <item android:title="Settings"
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"/>
</menu>
