...
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/generic_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bad_script"
        android:text="Nome utente: "
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
