...
        android:text="in Book Bearer"
        android:textColor="#CF8A00"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#BD7701"
        android:text="Login"
...
